Fix paragraph spacing on glossary and instructions

--- a/css/screen.styl
+++ b/css/screen.styl
@@ -13,10 +13,6 @@ body
 body, select, textarea, input
     font 100% Arial, Verdana, Helvetica, sans-serif
 
-// p
-//     margin 15px 0
-//     line-height 150%
-
 a, a:visited
     color #A1A1A3
     text-decoration underline
@@ -111,7 +107,7 @@ nav
     li
         list-style none
         float left
-        height 37px
+        height 40px
 
         a, a:visited
             height 25px
@@ -387,6 +383,10 @@ footer
     margin-bottom 20px
     padding-bottom 20px
 
+    p
+        margin 15px 0
+        line-height 150%
+
     h2
         font 2.8em Georgia, "Times New Roman", Times, serif
         background url(../images/bg_hdr.gif) left 8px no-repeat
@@ -443,6 +443,9 @@ footer
     padding-top 10px
     font-size 1.3em
 
+    span
+        color #fff
+
     h2
         color #fff
         font Georgia, "Times New Roman," Times, serif
@@ -452,6 +455,8 @@ footer
 
     p
         color #fff
+        margin 15px 0
+        line-height 150%
 
     .ui-widget-header
         color #fff
